<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebe9d7">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">


        <ImageView
            android:id="@+id/ioasys_logo"
            android:layout_width="wrap_content"
            android:layout_height="40.5dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/ioasys"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_home" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="48.5dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/welcome_message"
            android:textColor="@color/charcoal_grey"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ioasys_logo" />


        <TextView
            android:id="@+id/tv_login_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="43.5dp"
            android:layout_marginTop="16.5dp"
            android:layout_marginEnd="43.5dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/placeholder_login"
            android:textColor="@color/charcoal_grey"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="45dp"
            app:boxBackgroundColor="#383743"
            app:boxStrokeColor="#383743"
            app:helperTextTextAppearance="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_text"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="#EE4C77">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#383743"
                android:textColorHint="#383743" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            app:boxBackgroundColor="#383743"
            app:boxStrokeColor="#383743"
            app:helperTextTextAppearance="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:startIconDrawable="@drawable/ic_cadeado"
            app:startIconTint="#EE4C77">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColor="#383743"
                android:textColorHint="#383743" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:background="#57bbbc"
            android:text="@string/login_enter"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>